fix bug with images and icons not showing in production

--- a/app/assets/stylesheets/transit.css.scss
+++ b/app/assets/stylesheets/transit.css.scss
@@ -15,13 +15,13 @@ $transit-secondary-color:#ad361a !default;
 @import "includes/transit";
 
 @mixin icon24($row:1, $bgx:0px, $offset:0px){
-	background-image:url('transit/icon24x24.png'); background-repeat:no-repeat;
+	background-image:url('/assets/transit/icon24x24.png'); background-repeat:no-repeat;
 	$y: ($row - 1) * -24px;
 	background-position:$bgx $y;
 }
 
 @mixin fileIcon($row:1, $bgx:0px, $offset:0px){
-	background-image:url('transit/icon24x24_files.png'); background-repeat:no-repeat;
+	background-image:url('/assets/transit/icon24x24_files.png'); background-repeat:no-repeat;
 	$y: ($row - 1) * -24px;
 	background-position:$bgx $y;
 }
